--- a/xm_shop_back_web/src/main/resources/dataSource.properties
+++ b/xm_shop_back_web/src/main/resources/dataSource.properties
@@ -1,10 +1,10 @@
-#数据库通用配置
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/zshop?useSSL=false&useUnicode=true&characterEncoding=utf-8
+#\u6570\u636E\u5E93\u901A\u7528\u914D\u7F6E
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/zshop?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=root
 
-#数据库连接池配置
+#\u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u914D\u7F6E
 jdbc.initialSize=10
 jdbc.maxActive=50
 jdbc.minIdle=3
