--- a/xm_shop_back_web/src/main/resources/dataSource.properties
+++ b/xm_shop_back_web/src/main/resources/dataSource.properties
@@ -1,6 +1,6 @@
 #\u6570\u636E\u5E93\u901A\u7528\u914D\u7F6E
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/zshop?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://112.74.180.80:3306/zshop?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=root
 
