--- a/xm_shop_front_web/pom.xml
+++ b/xm_shop_front_web/pom.xml
@@ -29,7 +29,11 @@
             <artifactId>xm_shop_service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>4.5.16</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
