--- a/xm_shop_front_web/src/main/resources/redis.properties
+++ b/xm_shop_front_web/src/main/resources/redis.properties
@@ -1,8 +1,8 @@
-redis.host=127.0.0.1
+redis.host=112.74.180.80
 redis.port=6379
 redis.timeout=5000
-#redis.password=
-#连接池信息
+redis.password=yuhui521.
+#\u8FDE\u63A5\u6C60\u4FE1\u606F
 redis.maxTotle=50
 redis.minIdle=5
 redis.maxIdel=20
